--- a/.config/doom/config.org
+++ b/.config/doom/config.org
@@ -98,30 +98,11 @@ We need to configure it and solaire-mode manually.
   (add-hook 'doom-load-theme-hook #'doom-themes-org-config)
 
   ;; more Atom-esque file icons for neotree/treemacs
-  (when (featurep! :ui neotree)
-    (add-hook 'doom-load-theme-hook #'doom-themes-neotree-config)
-    (setq doom-themes-neotree-enable-variable-pitch t
-          doom-themes-neotree-file-icons 'simple
-          doom-themes-neotree-line-spacing 2))
   (when (featurep! :ui treemacs)
     (add-hook 'doom-load-theme-hook #'doom-themes-treemacs-config)))
-
-(use-package! solaire-mode
-  :when (or (daemonp) (display-graphic-p))
-  :hook (doom-load-theme . solaire-global-mode)
-  :config
-  (when (daemonp)
-    (add-hook! '(doom-switch-frame-hook after-make-frame-functions)
-      (defun +doom-disable-solaire-mode-maybe-h (&optional frame)
-        (if (display-graphic-p frame)
-            (unless solaire-global-mode
-              (solaire-global-mode +1))
-          (when solaire-global-mode
-            (solaire-global-mode -1)))))))
 #+end_src
 
-We need the current theme colors' outside of emacs (e.g. for polybar)
-So lets extract them into environment variables.
+We need to export all the theme specific colors so we can use it outside of emacs
 #+begin_src emacs-lisp
 (defun db/extract-theme-colors (&optional theme)
   "Extract colors from the current theme."
